# love-letter

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
src/love_letter/: __init__.py  __main__.py  server.py
src/love_letter/cli/: __init__.py  main.py  render.py
src/love_letter/engine/: __init__.py  cards.py  rules.py  state.py
tests/: test_deck.py  test_fuzz_api.py  test_multiplayer_api.py  test_rules.py  test_web_api.py
web/: app.js  index.html  styles.css
